<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EnterUnitVectors">

    <!-- TITLE -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unit_vectors_title"
            android:textAlignment="center"
            android:textColor="#009688"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- Vector A title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/vectorATitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Enter values for vector A" />

    </LinearLayout>

    <!-- Vector A Inputs -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <EditText
            android:id="@+id/scaleA"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:ems="4"
            android:gravity="end"
            android:hint="@string/scaleA_input_hint"
            android:textColorHint="#8D6E63"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:labelFor="@id/ai_input_description"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:imeOptions="actionDone"
            android:lines="1"
            tools:ignore="DuplicateSpeakableTextCheck"/>

        <EditText
            android:id="@+id/ai_input"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:ems="4"
            android:gravity="end"
            android:hint="@string/ai_input_hint"
            android:textColorHint="#8D6E63"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:labelFor="@id/ai_input"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:imeOptions="actionDone"
            android:lines="1"
            tools:ignore="DuplicateSpeakableTextCheck"/>

        <EditText
            android:id="@+id/aj_input"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:ems="4"
            android:gravity="end"
            android:hint="@string/aj_input_hint"
            android:textColorHint="#8D6E63"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:labelFor="@id/aj_input"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:imeOptions="actionDone"
            android:lines="1"
            tools:ignore="DuplicateSpeakableTextCheck"/>

        <EditText
            android:id="@+id/ak_input"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:ems="4"
            android:gravity="end"
            android:hint="@string/ak_input_hint"
            android:textColorHint="#8D6E63"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:labelFor="@id/ak_input"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:imeOptions="actionDone"
            android:lines="1"
            tools:ignore="DuplicateSpeakableTextCheck"/>

        <TextView
            android:id="@+id/as_input_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:text="@string/as_input_description" />

        <TextView
            android:id="@+id/ai_input_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:text="@string/ai_input_description" />

        <TextView
            android:id="@+id/aj_input_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:text="@string/aj_input_description" />

        <TextView
            android:id="@+id/ak_input_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:text="@string/ak_input_description" />

    </LinearLayout>

    <!-- Vector A representations -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/vectorA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:text="Vector A" />

    </LinearLayout>

    <!-- Operation Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">


        <Button
            android:id="@+id/plus_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:text="@string/plus"
            android:textSize="24sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />

        <Button
            android:id="@+id/minus_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:text="@string/minus"
            android:textSize="24sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />

        <Button
            android:id="@+id/dotProduct_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:text="@string/dotProduct"
            android:textSize="24sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />

        <Button
            android:id="@+id/crossProduct_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:text="@string/crossProduct"
            android:textSize="24sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />
    </LinearLayout>

    <!-- Vector B title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/vectorBTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Enter values for vector B" />

    </LinearLayout>

    <!-- Vector B inputs -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <EditText
            android:id="@+id/scaleB"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:ems="4"
            android:gravity="end"
            android:hint="@string/scaleB_input_hint"
            android:textColorHint="#8D6E63"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:labelFor="@id/bi_input_description"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:imeOptions="actionDone"
            android:lines="1"
            tools:ignore="DuplicateSpeakableTextCheck"/>

        <EditText
            android:id="@+id/bi_input"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:ems="4"
            android:gravity="end"
            android:hint="@string/bi_input_hint"
            android:textColorHint="#8D6E63"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:labelFor="@id/bi_input"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:imeOptions="actionDone"
            android:lines="1"
            tools:ignore="DuplicateSpeakableTextCheck"/>

        <EditText
            android:id="@+id/bj_input"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:ems="4"
            android:gravity="end"
            android:hint="@string/bj_input_hint"
            android:textColorHint="#8D6E63"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:labelFor="@id/bj_input"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:imeOptions="actionDone"
            android:lines="1"
            tools:ignore="DuplicateSpeakableTextCheck"/>

        <EditText
            android:id="@+id/bk_input"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:ems="4"
            android:gravity="end"
            android:hint="@string/bk_input_hint"
            android:textColorHint="#8D6E63"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:labelFor="@id/bk_input"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:imeOptions="actionDone"
            android:lines="1"
            tools:ignore="DuplicateSpeakableTextCheck"/>

        <TextView
            android:id="@+id/bs_input_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:text="@string/bs_input_description" />

        <TextView
            android:id="@+id/bi_input_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:text="@string/bi_input_description" />

        <TextView
            android:id="@+id/bj_input_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:text="@string/bj_input_description" />

        <TextView
            android:id="@+id/bk_input_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:text="@string/bk_input_description" />

    </LinearLayout>

    <!-- Vector B representations -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/vectorB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:text="Vector B" />

    </LinearLayout>

    <!-- RESULTS -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/results"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="28sp"
            tools:text="RESULT" />

    </LinearLayout>

</LinearLayout>